Fixes issue with blog share buttons jumping around on hover due to padding

--- a/css/blog.less
+++ b/css/blog.less
@@ -183,4 +183,10 @@
 	button.btn, button.btn:hover {
 		padding: 8px 18px 8px;
 	}
+	button.btn {
+		border: 4px solid @color-swatch3;
+		&:hover {
+			border: 4px solid @color-swatch2;
+		}
+	}
 }
